doc: Add index-es.html and script-es.js files

--- a/index-es.html
+++ b/index-es.html
@@ -10,10 +10,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Source+Code+Pro&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-pt.css">
   <link rel="stylesheet" href="media-queries.css">
   <script src="https://kit.fontawesome.com/a7717bed62.js" crossorigin="anonymous"></script>
-  <script src="script.js" defer></script>
+  <script src="script-es.js" defer></script>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <img src="./img/logo-branco.png" alt="logo Luis Cárcamo">
     <div class="nav-title">
       <h4>Luis Cárcamo</h4>
-      <p>Web Developer</p>
+      <p>Desarrollador Web</p>
     </div>
     <a href="">
       <i class="fa-solid fa-bars"></i>
@@ -29,19 +29,19 @@
     <ul class="nav-btns">
       <li><button id="about-nav-btn">
           <i class="fa-solid fa-address-card nav-modal-icon"></i>
-          About
+          Sobre
         </button></li>
       <li><button id="skills-nav-btn">
           <i class="fa-solid fa-pen-to-square nav-modal-icon"></i>
-          Skills
+          Habilidades
         </button></li>
       <li><button id="portfolio-nav-btn">
           <i class="fa-regular fa-window-restore nav-modal-icon"></i>
-          Portfolio
+          Portafolio
         </button></li>
       <li><button id="contact-nav-btn">
           <i class="fa-solid fa-envelope nav-modal-icon"></i>
-          Contact
+          Contacto
         </button></li>
     </ul>
     <div class="credits">
@@ -62,23 +62,23 @@
     <ul>
       <li><button class="nav-modal-btn">
           <i class="fa-solid fa-address-card nav-modal-icon"></i>
-          About
+          Sobre mí
         </button></li>
       <li><button class="nav-modal-btn">
           <i class="fa-solid fa-pen-to-square nav-modal-icon"></i>
-          Skills
+          Habilidades
         </button></li>
       <li><button class="nav-modal-btn">
           <i class="fa-regular fa-window-restore nav-modal-icon"></i>
-          Portfolio
+          Portafolio
         </button></li>
       <li><button class="nav-modal-btn">
           <i class="fa-solid fa-envelope nav-modal-icon"></i>
-          Contact
+          Contacto
         </button></li>
     </ul>
     <div class="credits">
-      <p>Developed by Luis Cárcamo</p>
+      <p>Desarrollado por Luis Cárcamo</p>
       <div class="credits-icons">
         <a href="https://www.instagram.com/luch094.jpg/" target="_blank">
           <i class="fa-brands fa-instagram"></i>
@@ -100,21 +100,21 @@
         <p>Description</p>
       </div>
       <video src="./img/portfolio/kings-lockdown.mp4" autoplay loop>
-        Your browser does not support the video tag
+        Su navegador no soporta la tag de video
       </video>
       <div class="portfolio-nav">
         <div class="prev-project">
           <i class="fa-solid fa-circle-chevron-left"></i>
-          <p>Prev</p>
+          <p>Ant</p>
         </div>
         <div class="next-project">
           <i class="fa-solid fa-circle-chevron-right"></i>
-          <p>Next</p>
+          <p>Sig</p>
         </div>
       </div>
       <div class="project-links">
-        <a href="">Website</a>
-        <a href="">Repository</a>
+        <a href="">Página</a>
+        <a href="">Repositorio</a>
       </div>
     </div>
   </div>
@@ -123,32 +123,34 @@
       <hr class="bg-line-01">
       <hr class="bg-line-02">
       <div class="lang-container">
-        <p id="lang-active"><strong>ENG-US</strong></p>
+        <p id="lang-active"><strong>ES-PE</strong></p>
         <div class="languages">
           <ul class="">
-            <!-- <li id="lang-eng">
-              <img src="./img/languages/united-states.png" alt="English United States">
-              <span>ENG-US</span>
-            </li> -->
+            <li id="lang-eng">
+              <a href="index.html">
+                <img src="./img/languages/united-states.png" alt="English United States">
+                <span>ENG-US</span>
+              </a>
+            </li>
             <li id="lang-pt">
               <a href="index-pt.html">
                 <img src="./img/languages/brazil.png" alt="Português Brasil">
                 <span>PT-BR</span>
               </a>
             </li>
-            <li id="lang-esp">
-              <a href="index-es.html">
+            <!-- <li id="lang-esp">
+              <a href="">
                 <img src="./img/languages/peru.png" alt="Español Perú">
                 <span>ESP-PE</span>
               </a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
       <div class="section-text home-text">
-        <p>Hi, my name is</p>
+        <p>Hola, mi nombre es</p>
         <h1>Luis Enrique Cárcamo</h1>
-        <p>Web Developer - <strong>Front End</strong> </p>
+        <p>Desarrollador Web - <strong>Front End</strong> </p>
       </div>
       <div class="profile-circle-01">
         <div class="profile-circle-02">
@@ -156,29 +158,29 @@
         </div>
       </div>
       <div class="guide-signs home-scroll-sign">
-        <p>scroll</p>
+        <p>sigue</p>
         <i class="fa-solid fa-arrow-down"></i>
       </div>
       <div class="guide-signs home-scroll-sign">
-        <p>scroll</p>
+        <p>sigue</p>
         <i class="fa-solid fa-arrow-down"></i>
       </div>
     </section>
     <section id="about" class="about-container">
-      <h2>About me</h2>
+      <h2>Sobre mí</h2>
       <div class="about-text section-text">
-        <p>Born in Lima, Peru, and living in São Paulo, Brazil, since 2012. I've studied and worked as a
+        <p>Nací en Lima, Perú, y vivo en São Paulo, Brazil, desde 2012. He estudiado y trabajado como
           <a href="" id="musician" class="about-anchor active">
-            musician</a>,
+            músico</a>,
           <a href="" id="illustrator" class="about-anchor">
-            illustrator</a>,
+            ilustrador</a>,
           <a href="" id="teacher" class="about-anchor">
-            language teacher</a> and
+            profesor de idiomas</a> y
           <a href="" id="developer" class="about-anchor">
-            web developer</a>.
+            desarrollador web</a>.
         </p>
-        <p>For the last couple of years I've had the opportunity to work both independently and with teams of collaborators.</p>
-        <p>Currently, I'm acting mainly as a Front End Web Developer, all the way from designing responsive layouts, to deploying fully functional, interactive and intuitive web applications.</p>
+        <p>Durante los últimos años he tenido la oportunidad de trabajar de forma independiente y con equipos de colaboradores.</p>
+        <p>Actualmente trabajo principalmente como Desarrollador Web Front End, desde el diseño de layouts responsivos, hasta el deploy de aplicaciones web completamente funcionales, interactivas e intuitivas.</p>
       </div>
       <div class="about-grid">
         <div>
@@ -195,12 +197,12 @@
         </div>
       </div>
       <div class="bg-text">
-        <p>About</p>
+        <p>Sobre</p>
       </div>
     </section>
     <section id="skills" class="skills-container">
       <div class="skills-header">
-        <h2>Skills</h2>
+        <h2>Habilidades</h2>
         <i class="fa-solid fa-pen-to-square"></i>
       </div>
       <div class="guide-signs skills-click-sign">
@@ -239,15 +241,15 @@
         </div>
         <div id="languages" class="card">
           <div class="card-front">
-            <h3>Languages</h3>
+            <h3>Idiomas</h3>
           </div>
           <div class="card-back">
-            <h4>Languages</h4>
+            <h4>Idiomas</h4>
             <ul>
-              <li>Spanish (native)</li>
-              <li>English (fluent)</li>
-              <li>Portuguese (fluent)</li>
-              <li>French (basic)</li>
+              <li>Español (nativo)</li>
+              <li>Inglés (fluente)</li>
+              <li>Portugués (fluente)</li>
+              <li>Francés (básico)</li>
             </ul>
           </div>
         </div>
@@ -258,25 +260,25 @@
           <div class="card-back">
             <h4>Soft Skills</h4>
             <ul>
-              <li>Creativity</li>
-              <li>Time Management</li>
-              <li>Problem Solving</li>
-              <li>Conflict Resolution</li>
+              <li>Creatividad</li>
+              <li>Gestión de tempo</li>
+              <li>Resolución de Problemas</li>
+              <li>Resolución de Conflictos</li>
             </ul>
           </div>
         </div>
       </div>
       <div class="bg-text">
-        <p>Skills</p>
+        <p>Habilid</p>
       </div>
     </section>
     <section id="portfolio" class="portfolio-container">
-      <h2>Portfolio</h2>
+      <h2>Portafolio</h2>
       <div class="portfolio-text section-text">
         <p>
-          Take a look at some of my most recent projects with links to their respective <strong>GitHub</strong>
-          repositories and deployed web pages. Feel free to navigate them and <strong>let met know</strong> what you
-          think!
+          Dale una ojeada a algunos de mis proyectos más recientes con sus respectivos repositorios en
+          <strong>GitHub</strong>
+          y páginas publicadas. Siéntete libre para navegar y <strong>cuéntame</strong> qué te pareció!
         </p>
       </div>
       <div class="guide-signs portfolio-click-sign">
@@ -287,41 +289,41 @@
         <!-- Projects are inserted here -->
       </ul>
       <div class="bg-text">
-        <p>Portfolio</p>
+        <p>Portafolio</p>
       </div>
     </section>
     <section id="contact" class="contact-container">
-      <h2>Contact me</h2>
+      <h2>Contacto</h2>
       <div class="contact-text section-text">
         <p>
-          Do you feel like I would be a nice addition to your <strong>team of developers</strong>? Let's talk about it!
+          ¿Crees que sería una buena adición a tu <strong>grupo de desarrolladores</strong>? ¡Hablemos al respecto!
         </p>
         <p>
-          Do you need a web page for your <strong>business</strong> or would like to update the one you currently have?
-          Call me up!
+          ¿Necesitas una página web para tu <strong>negocio</strong> o te gustaría actualizar la que ya tienes?
+          ¡Mándame un mensaje!
         </p>
         <p>
-          Are you a developer looking to collaborate on an exciting <strong>new project</strong>? Definitely contact me!
+          ¿Eres un(a) desarrollador(a) buscando alguien para colaborar en un <strong>nuevo proyecto</strong>? ¡Entra en contacto!
         </p>
       </div>
       <form action="https://formsubmit.co/d040fa0799e54ff6f28ed5275e48dbfa" method="POST">
         <input type="hidden" name="_next" value="https://github.com/LuisECL">
-        <input type="email" name="email" id="email" placeholder="Email address">
+        <input type="email" name="email" id="email" placeholder="Dirección de email">
         <input type="hidden" name="_subject" value="Portfolio page contact message!">
-        <textarea name="message" id="email-message" cols="30" rows="10" placeholder="Your message"></textarea>
-        <button type="submit">Send</button>
+        <textarea name="message" id="email-message" cols="30" rows="10" placeholder="Tu mensaje"></textarea>
+        <button type="submit">Enviar</button>
       </form>
       <div class="guide-signs contact-click-sign">
         <i class="fa-solid fa-arrow-left"></i>
-        <p>You can also check out my social media!</p>
+        <p>¡Dale una chequeada a mis redes sociales!</p>
       </div>
       <div class="bg-text">
-        <p>Contact</p>
+        <p>Contato</p>
       </div>
     </section>
   </main>
   <footer class="credits">
-    <p>Developed by Luis Cárcamo</p>
+    <p>Desarrollado por Luis Cárcamo</p>
     <div class="credits-icons">
       <a href="https://www.instagram.com/luch094.jpg/" target="_blank">
         <i class="fa-brands fa-instagram"></i>
