--- a/index-pt.html
+++ b/index-pt.html
@@ -139,7 +139,7 @@
               </a>
             </li> -->
             <li id="lang-esp">
-              <a href="">
+              <a href="index-es.html">
                 <img src="./img/languages/peru.png" alt="Español Perú">
                 <span>ESP-PE</span>
               </a>
